crates/obzenflow_runtime/tests/compile_fail/effect_missing_safety.stderr
error[E0046]: not all trait items implemented, missing: `SAFETY`
  --> tests/compile_fail/effect_missing_safety.rs:22:1
   |
22 | impl Effect for MissingSafetyEffect {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `SAFETY` in implementation
   |
   = help: implement the missing item: `const SAFETY: EffectSafety = /* value */;`
